[package]
name = "leanbar"
version = "0.0.1"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "Personal rewrite of yambar for hyprland"
repository = "https://github.com/PieInOblivion/leanbar"
keywords = []
categories = []
readme = "README.md"
exclude = [
    ".gitignore",
]

[profile.release]
lto = true

[dependencies]
fontdue = "0.9.3"
rustix = { version = "1.1.4", features = ["event", "fs", "mm"] }
time = { version = "0.3.47", features = ["local-offset", "parsing", "formatting", "macros"] }
wayland-client = "0.31.12"
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
