[package]
name = "leanbar"
version = "0.0.1"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "Personal rewrite of yambar for hyprland"
repository = "https://github.com/PieInOblivion/leanbar"
keywords = []
categories = []
readme = "README.md"
exclude = [
    ".gitignore",
]

[profile.release]
lto = true

[dependencies]
fontdue = "0.9"
rustix = { version = "1.1", features = ["event", "fs", "mm"] }
thiserror = "2"
time = { version = "0.3", features = ["local-offset"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
